--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week-3-task",
+  "name": "final-task-stage1",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
